rpi5/cross-seed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cross-seed
spec:
  selector:
    app: cross-seed
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
